 - Experimental support for parallel assembly and solve
 - Bug fix in project() function, update to UFL syntax
 - Remove disp() functions and replace by info(foo, true)
 - Add fem unit test (Python)
 - Clean up SystemAssembler
 - Enable assemble_system through PyDOLFIN
 - Add 'norm' to GenericMatrix
 - Efficiency improvements in NewtonSolver
 - Rename NewtonSolver::get_iteration() to NewtonSolver::iteration()
 - Improvements to EpetraKrylovSolver::solve
 - Add constructor Vector::Vector(const GenericVector& x)
 - Remove SCons deprecation warnings
 - Memory leak fix in PETScKrylovSolver
 - Rename dolfin_assert -> assert and use C++ version
 - Fix debug/optimise flags
 - Remove AvgMeshSize, InvMeshSize, InvFacetArea from SpecialFunctions
 - Rename MeshSize -> CellSize
 - Rewrite parameter system with improved support for command-line parsing,
   localization of parameters (per class) and usability from Python
 - Remove OutflowFacet from SpecialFunctions
 - Rename interpolate(double*) --> interpolate_vertex_values(double*)
 - Add Python version of Cahn-Hilliard demo
 - Fix bug in assemble.py
 - Permit interpolation of functions between non-matching meshes
 - Remove Function::Function(std::string filename)
 - Transition to new XML io
 - Remove GenericSparsityPattern::sort
 - Require sorted/unsorted parameter in SparsityPattern constructor
 - Improve performance of SparsityPattern::insert
 - Replace enums with strings for linear algebra and built-in meshes
 - Allow direct access to Constant value
 - Initialize entities in MeshEntity constructor automatically and check range
 - Add unit tests to the memorycheck
 - Add call to clean up libxml2 parser at exit
 - Remove unecessary arguments in DofMap member functions
 - Remove reference constructors from DofMap, FiniteElement and FunctionSpace
 - Use a shared_ptr to store the mesh in DofMap objects
 - Interface change for wrapper code: PoissonBilinearForm --> Poisson::BilinearForm